@@ -177,26 +177,7 @@ DLLFUNC int m_sethost(aClient *cptr, aClient *sptr, int parc, char *parv[])
 		}
 		return 0;
 	}
-	/* uh uh .. too small */
-	switch (UHOST_ALLOWED)
-	{
-		case UHALLOW_NEVER:
-			if (MyClient(sptr))
-			{
-				sendto_one(sptr, ":%s NOTICE %s :*** /SetHost is disabled", me.name, sptr->name);
-				return 0;
-			}
-			break;
-		case UHALLOW_ALWAYS:
-			break;
-		case UHALLOW_NOCHANS:
-			if (MyClient(sptr) && sptr->user->joined)
-			{
-				sendto_one(sptr, ":%s NOTICE %s :*** /SetHost can not be used while you are on a channel", me.name, sptr->name);
-				return 0;
-			}
-			break;
-	}
+
 	if (strlen(parv[1]) < 1)
 	{
 		if (MyConnect(sptr))
@@ -233,6 +214,31 @@ DLLFUNC int m_sethost(aClient *cptr, aClient *sptr, int parc, char *parv[])
 		return 0;
 	}
 
+	/* uh uh .. too small */
+	switch (UHOST_ALLOWED)
+	{
+		case UHALLOW_NEVER:
+			if (MyClient(sptr))
+			{
+				sendto_one(sptr, ":%s NOTICE %s :*** /SetHost is disabled", me.name, sptr->name);
+				return 0;
+			}
+			break;
+		case UHALLOW_ALWAYS:
+			break;
+		case UHALLOW_NOCHANS:
+			if (MyClient(sptr) && sptr->user->joined)
+			{
+				sendto_one(sptr, ":%s NOTICE %s :*** /SetHost can not be used while you are on a channel", me.name, sptr->name);
+				return 0;
+			}
+			break;
+		case UHALLOW_REJOIN:
+			rejoin_doparts(sptr);
+			/* join sent later when the host has been changed */
+			break;
+	}
+
 	/* hide it */
 	sptr->umodes |= UMODE_HIDE;
 	sptr->umodes |= UMODE_SETHOST;
@@ -246,6 +252,9 @@ DLLFUNC int m_sethost(aClient *cptr, aClient *sptr, int parc, char *parv[])
 	/* spread it out */
 	sendto_serv_butone_token(cptr, sptr->name, MSG_SETHOST, TOK_SETHOST,
 	    "%s", parv[1]);
+
+	if (UHOST_ALLOWED == UHALLOW_REJOIN)
+		rejoin_dojoinandmode(sptr);
 
 	if (MyConnect(sptr))
 	{
